--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^2.30.2",
     "next": "11.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -18,7 +17,7 @@
     "@types/react": "17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.1",
-    "prisma": "^2.30.2",
+    "nextjs": "^0.0.3",
     "typescript": "4.4.2"
   }
 }
