--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.4.1",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/node": "^16.10.2",
     "@types/react": "^17.0.24",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
-    "prisma": "^3.1.1"
+    "prisma": "^3.1.1",
+    "typescript": "^4.4.3"
   }
 }
